[tool.poetry]
name = "easylm"
version = "0.1.0"
description = "Use language models (LLMs) in your applications with an easy to use interface"
authors = ["Mohammad Momeni <moehmeni@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
